# bwi_common

./: .gitmodules
bwi_gazebo_entities/: CMakeLists.txt  package.xml
bwi_gazebo_entities/launch/: random_persons.launch
bwi_knowledge_representation/env-hooks/: bwi_knowledge_representation.sh
bwi_knowledge_representation/scripts/: compute_euclidean_distance
bwi_kr_execution/: CMakeLists.txt
bwi_kr_execution/actasp/include/actasp/: ActionSelector.h  AspKR.h  AspRule.h  GraphPolicy.h  MultiPlanner.h  MultiPolicy.h  state_utils.h
bwi_kr_execution/actasp/include/actasp/executors/: MultirobotActionExecutor.h  ReplanningActionExecutor.h
bwi_kr_execution/actasp/include/actasp/reasoners/: Clingo.h  Clingo4_2.h  Reasoner.h
bwi_kr_execution/actasp/src/: Action.cpp  GraphPolicy.cpp  MultiPolicy.cpp
bwi_kr_execution/actasp/src/executors/: CMakeLists.txt  ExplainableActionExecutor.cpp  MultiPolicyExecutor.cpp  MultirobotActionExecutor.cpp  PartialPolicyExecutor.cpp
bwi_kr_execution/actasp/src/reasoners/: Clingo.cpp  Clingo4_2.cpp  FilteringReasoner.cpp  Reasoner.cpp
bwi_kr_execution/domain/: action_rules.asp  all_actions.asp  cost_rules.asp  hri.asp  hri_facts.asp  navigation.asp  navigation_facts.asp  nofilter.txt
bwi_kr_execution/domain_explain/: .gitignore  hri.asp  navigation.asp  navigation_facts.asp
bwi_kr_execution/domain_multi_real/: all_actions.asp  costs.asp  external.txt  lua.asp  navigation.asp  navigation_facts.asp  query.txt
bwi_kr_execution/domain_new/: all_actions.asp  costs.asp  external.txt  lua.asp  navigation.asp  navigation_facts.asp  query.txt
bwi_kr_execution/domain_simulation/: action_rules.asp  all_actions.asp  base_rules.asp  cost_rules.asp  hri.asp  hri_facts.asp  navigation.asp  navigation_facts.asp
bwi_kr_execution/domain_simulation_new/: navigation.asp  navigation_facts.asp
bwi_kr_execution/launch/: bwi_kr_execution.launch  bwi_kr_execution_explain.launch
bwi_kr_execution/msg/: NewPlan.msg
bwi_kr_execution/scripts/: tmp_learner
bwi_kr_execution/src/: ActionCostUpdater.h  ActionWithTime.h  AverageCostLearner.h  CMakeLists.txt  MultirobotRemoteReasoner.cpp  MultirobotRemoteReasoner.h  PeorlCostLearner.h  PlanExplainer.cpp  PlanExplainer.h  RemoteReasoner.cpp  RemoteReasoner.h  StaticFacts.cpp  asp_formatter.cpp  explain_plan_executor.cpp  explain_plan_server.cpp  learning_executor.cpp  multirobot_central_reasoning.cpp  multirobot_executor.cpp  multirobot_knowledge_reasoning.cpp  plan_executor_node.cpp  pybind_example.cpp
bwi_kr_execution/src/actions/: ActionCostEstimator.cpp  ActionCostEstimator.h  CMakeLists.txt  DeliverMessage.cpp  DeliverMessage.h  Knock.cpp  Knock.h  LogicalNavigation.cpp  LogicalNavigation.h  NavigateTo.cpp  NavigateTo.h  OpenDoor.cpp  OpenDoor.h  OpenSimulatedDoor.cpp  SearchPerson.cpp  SearchRoom.cpp  SearchRoom.h  action_registry.h
bwi_kr_execution/src/bwi_kr_execution/: cost_learner.py  tmp_learner.py
bwi_kr_execution/src/learning/: SarsaActionSelector.cpp  SarsaActionSelector.h
bwi_kr_execution/src/multirobot_actions/: ApproachArea.cpp  ApproachArea.h  CMakeLists.txt  GoTo.cpp  GoTo.h  LogicalNavigation.cpp  OpenDoor.cpp  OpenSimulatedDoor.cpp  Wait.cpp  Wait.h  WaitForOpen.cpp  WaitForOpen.h
bwi_kr_execution/srv/: MultirobotComputePlan.srv  MultirobotUpdateFluents.srv
bwi_mapper/include/bwi_mapper/: path_finder.h
bwi_msgs/: CMakeLists.txt
bwi_msgs/srv/: LogicalNavPlan.srv
bwi_tasks/: CMakeLists.txt
bwi_tasks/scripts/: tmp_demo_smach  tmp_exepriments_smach
bwi_tasks/src/: explain_plan_experiments.cpp  food_assembly_experiment.cpp  go_to_office_and_ask.cpp  hri_tasks.cpp  multi_robot_navigation.cpp  multi_robot_task.cpp
collect_gazebo_data/: CMakeLists.txt  package.xml
collect_gazebo_data/launch/: gazebo.launch
collect_gazebo_data/src/: collect_images.cpp
knowledge_representation/: README.md
knowledge_representation/scripts/: populate_with_map
plan_execution/: CMakeLists.txt
plan_execution/action/: ExecutePlan.action
plan_execution/srv/: ComputeAndExplainPlan.srv
utexas_gdc/knowledge/: bwi.yaml
utexas_gdc/worlds/: combined.world
(+89 files in other folders)
